--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <header class="header">
       <nav>
         <ul class="header__links-list">
-          <li class="header__links-list-item_no-bullet">
-            <a class="header__link_active">главная</a>
+          <li class="header__links-list-item header__links-list-item_active header__links-list-item_no-bullet">
+            <a class="header__link">главная</a>
           </li>
           <li class="header__links-list-item">
             <a class="header__link" href="#0">посмотреть лоты</a>
@@ -31,12 +31,10 @@
           alt="логотип"
         />
       </a>
-      <address class="header__address">
-        <div class="address">
-          <a class="address__link" href="tel:+99995555555">+9 999 555 5555</a>
-          <a class="address__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-          <p>наб. Принсенграхт 263-<br />265, Амстердам</p>
-        </div>
+      <address class="address header__address">
+        <a class="address__link" href="tel:+99995555555">+9 999 555 5555</a>
+        <a class="address__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p>наб. Принсенграхт 263-<br />265, Амстердам</p>
       </address>
     </header>
     <main>
@@ -56,61 +54,59 @@
       </section>
       <section class="lots">
         <h2 class="lots__heading">лоты</h2>
-        <article>
-          <ul class="lots__card-list">
-            <li class="lots__card-list-item">
-              <a class="card-link" href="#0">
-                <div class="card card_type_film">
-                  <div class="overlay"></div>
-                  <h3 class="card__title">
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item">
+            <a class="card-link" href="#0">
+              <article class="card card_type_film">
+                <div class="overlay"></div>
+                <h3 class="card__title">
                     Фильм режиссёра, который бросил киношколу
-                  </h3>
-                  <p class="card__text">
+                </h3>
+                <p class="card__text">
                     Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
                     ставка, если бы вы не знали, что режиссёр — Пол Томас
                     Андерсон?
-                  </p>
-                </div>
-              </a>
-            </li>
-            <li class="lots__card-list-item">
-              <a class="card-link" href="#0">
-                <div class="card card_type_book">
-                  <div class="overlay"></div>
-                  <h3 class="card__title">
+                </p>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item">
+            <a class="card-link" href="#0">
+              <article class="card card_type_book">
+                <div class="overlay"></div>
+                <h3 class="card__title">
                     Книга, где описан один скучный день из жизни рекламного
                     агента
-                  </h3>
-                  <p class="card__text">
+                </h3>
+                <p class="card__text">
                     Объёмом почти в тысячу страниц. Иногда без знаков препинания
                     и с переходами на древнеанглийский. В ней одновременно
                     рассказывается о 16 июня 1904 года и об истории литературы,
                     начиная с античных времён. И это всё накладывается на
                     эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
                     Джеймса Джойса?
-                  </p>
-                </div>
-              </a>
-            </li>
-            <li class="lots__card-list-item">
-              <a class="card-link" href="#0">
-                <div class="card card_type_picture">
-                  <div class="overlay"></div>
-                  <h3 class="card__title">
+                </p>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item">
+            <a class="card-link" href="#0">
+              <article class="card card_type_picture">
+                <div class="overlay"></div>
+                <h3 class="card__title">
                     Картина, которую повторит даже 5-летний сын маминой подруги
-                  </h3>
-                  <p class="card__text">
+                </h3>
+                <p class="card__text">
                     Ну действительно, там линия, тут кружочек, а здесь и вовсе
                     что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
                     котиков<span class="ellipses">...</span>Сколько бы вы на
                     такое поставили, если бы не знали, что это — одна из
                     революционных работ Кандинского?
-                  </p>
-                </div>
-              </a>
-            </li>
-          </ul>
-        </article>
+                </p>
+              </article>
+            </a>
+          </li>
+        </ul>
         <a class="lots__look-more-link" href="#0">посмотреть больше</a>
       </section>
       <section class="about">
@@ -122,7 +118,7 @@
               alt="логотип"
             />
           </div>
-          <h4 class="about__title">Об аукционе</h4>
+          <h2 class="about__title">Об аукционе</h2>
           <div class="about__text">
             <p>
               Здесь вы не встретите очередное пафосное собрание невероятно
@@ -145,17 +141,15 @@
       </section>
     </main>
     <footer class="footer">
-      <address class="footer__address">
-        <div class="address">
-          <a class="address__link" href="tel:+99995555555">+9 999 555 5555</a>
-          <a class="address__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-          <p>наб. Принсенграхт 263-<br />265, Амстердам</p>
-        </div>
+      <address class="address">
+        <a class="address__link" href="tel:+99995555555">+9 999 555 5555</a>
+        <a class="address__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p>наб. Принсенграхт 263-<br />265, Амстердам</p>
       </address>
-      <nav class="footer__menu">
+      <nav>
         <ul class="footer__menu-list">
-          <li class="footer__menu-list-item">
-            <a class="footer__menu-link_active">главная</a>
+          <li class="footer__menu-list-item footer__menu-list-item_active">
+            <a class="footer__menu-link">главная</a>
           </li>
           <li class="footer__menu-list-item">
             <a class="footer__menu-link" href="#0">посмотреть лоты</a>
